third_party/WebKit/Source/core/svg/SVGViewSpec.h
@@ -66,7 +66,7 @@ class SVGViewSpec final : public GarbageCollectedFinalized<SVGViewSpec>,
 
 template <typename T>
 void SVGViewSpec::inheritViewAttributesFromElement(T& inheritFromElement) {
-  if (!inheritFromElement.hasEmptyViewBox())
+  if (inheritFromElement.viewBox()->currentValue()->isValid())
     setViewBox(inheritFromElement.viewBox()->currentValue()->value());
 
   if (inheritFromElement.preserveAspectRatio()->isSpecified()) {
